215		C++			Build_and_test.bat
216		C++			DasGuntLord01's recommended changes.
217		C++			Improve fairness of many-to-one owner and core allocations.
218		C++			Simplify capital conversion algorithm.
219		C++			Create minority pops for many-to-one mapped provinces, when applicable.
220		???
221		C++			Add minorities to provinces with recent conversion and assimilation events.
222		C++			Improve determinism and reliability of army support pop selection.
223		C++			Fix Dyola culture mapping.
224		???
225		C++			Avoid creating noculture/noreligion minority pops
226		C++			Assign regiments to minority soldier pops that are already large enough before growing majority soldier pops.
227		C++			Select V2 home provinces for armies deterministically based on which mapped province is best capable of supporting the army.
228		C++			Migrate parser grammar from Spirit::Classic to Spirit::Qi, and other misc fixes.  Notably faster, and quote stripping works right.
229		C++			National Values
230		C++			Avoid army and state ID collisions
231		C++			Move start date to 31.12.1835 so pops have the opportunity to develop issues before first election.
232		C++			Tweak parser grammar to allow empty objects (like many V2 unit-name counters)
233		C++			Don't generate pops with size < 1.  Correct pop RGO employment indices.  Modify output order to be more like V2.
234		C++			Match output order more closely to V2 saves to make comparisons easier.
235		C++			Culture mapping changes: give Sami, Ukrainian, Ugrian, Pashtun, Baluchi, and Malagasy correct mappings; move Papuan from Polynesian to Melanesian.
236		C++			Add starting factories.
237		C++			Apply diminishing-returns scaling to manufactory bonus for starting factories.
238		C++			Convert starting financials (treasury, loans, etc)
239		C++			Added forgotten files
240		C++			Fix regression in accepted culture mapping
241		C++			Fix parsing of dates with non-four-digit years (i.e. 1.1.1)